# openmcp-workspace

./: .env.example  .gitignore  README.md  about_project.md  backlog.json  create_dirs.bat  docker-compose.dev.yml  docker-compose.yml  project.status.json  prompt.txt
.github/: description.md
.github/workflows/: ci.yml
apps/backend/: .env.example  Dockerfile  output.json  pyproject.toml  pytest_html_report.html  requirements.txt
apps/backend/archive/: output_1743596823.903857.json  output_1743596927.439373.json  output_1743597083.068648.json  output_1743597146.1325433.json  output_1743597267.8220572.json  output_1743597351.952695.json  output_1743597415.4352357.json  output_1743597513.28495.json  output_1743597582.4723234.json  output_1743597641.6063635.json  output_1743597709.0721037.json  output_1743597784.177543.json  output_1743597889.1020603.json  output_1743598056.9938161.json  output_1743598099.0394742.json  output_1743598346.884821.json  output_1743601854.438438.json  output_1743602052.9413483.json  output_1743602248.4882932.json  output_1743603330.9925146.json  output_1743603367.5641065.json  output_1743607477.332279.json
apps/backend/src/: main.py
apps/backend/src/app/: __init__.py  main.py
apps/backend/src/app/api/: __init__.py
apps/backend/src/app/api/v1/: api.py
apps/backend/src/app/api/v1/endpoints/: __init__.py  context.py
apps/backend/src/app/core/: config.py  monitoring.py
apps/backend/src/app/db/: __init__.py  base.py  session.py  types.py
apps/backend/src/app/models/: __init__.py  context.py
apps/backend/src/app/schemas/: context.py
apps/backend/src/app/services/: context.py  storage.py  test_storage.py
apps/backend/tests/: .env.test  .env.test.postgres  conftest.py  test_context.py  test_settings.py
apps/dashboard/: .eslintrc.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/dashboard/src/: App.tsx  theme.ts
apps/dashboard/src/__tests__/: App.test.tsx
apps/dashboard/src/components/ContextCommit/: ContextCommit.tsx  index.ts
apps/dashboard/src/components/ContextHistory/: ContextHistory.tsx  index.ts
apps/dashboard/src/components/Layout/: Layout.tsx
apps/dashboard/src/components/NotFound/: NotFound.tsx
apps/dashboard/src/services/: api.ts
apps/dashboard/src/test/mocks/: api.ts
apps/libraries/: README.md  output.json  pyproject.toml  pytest_html_report.html  requirements.txt  setup.py
apps/libraries/archive/: output_1743602254.7631164.json  output_1743603337.9024608.json  output_1743603373.934092.json  output_1743607483.8255744.json
apps/libraries/aws/: pyproject.toml
apps/libraries/llm/: pyproject.toml
apps/libraries/monitoring/: pyproject.toml
apps/libraries/src/: __init__.py  library.py
apps/libraries/src/aws/: __init__.py  client.py
apps/libraries/src/llm/: __init__.py  client.py
apps/libraries/src/monitoring/: __init__.py  client.py
apps/libraries/tests/: conftest.py  test_aws.py  test_library.py  test_llm.py  test_monitoring.py
apps/mcp-server/: .env.development  .env.example  .env.integration  .env.production  main.py  output.json  pyproject.toml  pytest_html_report.html  requirements.txt
apps/mcp-server/app/: main.py
apps/mcp-server/app/api/: rpc.py
apps/mcp-server/app/core/: config.py
apps/mcp-server/app/services/: llm.py
apps/mcp-server/archive/: output_1743597892.5850372.json  output_1743598060.5182917.json  output_1743598102.635777.json  output_1743601858.0203748.json  output_1743602056.3976696.json  output_1743602252.0454018.json  output_1743603335.005571.json  output_1743603371.2999547.json  output_1743607480.9803765.json
apps/mcp-server/scripts/: switch_env.bat
apps/mcp-server/src/app/: __init__.py  main.py
apps/mcp-server/src/app/api/: __init__.py  rpc.py
apps/mcp-server/src/app/core/: config.py
apps/mcp-server/src/app/services/: llm.py  storage.py
apps/mcp-server/tests/: .env.test  conftest.py  test_rpc.py
docker/prometheus/: prometheus.yml
docs/: agent-protocol.md  architecture.md  upgrade_plan.md
docs/features/: manual_context_commit.md
environments/: dev.env  prod.env  test.env
scripts/: create_project.ps1  install_dependencies.ps1  load_env.ps1  reinstall_mcp.ps1  run_tests.ps1  setup_dev.ps1  start_dev.ps1  start_prod.ps1  stop_dev.ps1
