[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = [
    "tests"
]
python_files = [
    "test_*.py"
]
addopts = "-v --cov=app --cov-report=term-missing"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openmcp-backend"
version = "0.1.0"
description = "OpenMCP Backend Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "boto3>=1.34.0",
    "psycopg2-binary>=2.9.9",
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.39.1",
    "pytest>=7.4.0",
    "httpx>=0.24.0",
    "pytest-cov>=4.1.0",
    "setuptools>=61.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["app"] 