[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = [
    "tests"
]
python_files = [
    "test_*.py"
]
addopts = "-v --cov=app --cov-report=term-missing"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openmcp-mcp-server"
version = "0.1.0"
description = "OpenMCP MCP Server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "boto3>=1.34.0",
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.39.1",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "setuptools>=61.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["app"] 